--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "mongoose": "^4.10.4"
   },
   "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-google": "^0.8.0",
     "nodemon": "^1.11.0"
   }
 }
