--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.3",
-    "mongoose": "^4.10.4"
+    "express-session": "^1.15.3",
+    "mongoose": "^4.10.4",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
